# pubsub-log-aggregator-adv

./: LICENSE  Makefile  docker-compose.yml  main.py  pyproject.toml
aggregator/: Dockerfile  app.py  config.py  consumer.py  database.py  dedup.py  models.py  requirements.txt
publisher/: Dockerfile  publisher.py
tests/: conftest.py  test_api.py  test_concurrency.py  test_dedup.py  test_persistence.py
